// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */ 'use strict';
=====================================output=====================================
/* comment */ "use strict"

================================================================================
`;

exports[`snippet: #0 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */ 'use strict';
=====================================output=====================================
/* comment */ "use strict";

================================================================================
`;

exports[`snippet: #1 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  /* comment */ 'use strict';
}
=====================================output=====================================
function foo() {
  /* comment */ "use strict"
}

================================================================================
`;

exports[`snippet: #1 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  /* comment */ 'use strict';
}
=====================================output=====================================
function foo() {
  /* comment */ "use strict";
}

================================================================================
`;

exports[`snippet: #2 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
'use strict' /* comment */;
=====================================output=====================================
"use strict" /* comment */

================================================================================
`;

exports[`snippet: #2 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
'use strict' /* comment */;
=====================================output=====================================
"use strict"; /* comment */

================================================================================
`;

exports[`snippet: #3 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  'use strict' /* comment */;
}
=====================================output=====================================
function foo() {
  "use strict" /* comment */
}

================================================================================
`;

exports[`snippet: #3 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  'use strict' /* comment */;
}
=====================================output=====================================
function foo() {
  "use strict"; /* comment */
}

================================================================================
`;

exports[`snippet: #4 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment
'use strict';
=====================================output=====================================
// comment
"use strict"

================================================================================
`;

exports[`snippet: #4 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment
'use strict';
=====================================output=====================================
// comment
"use strict";

================================================================================
`;

exports[`snippet: #5 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  // comment
  'use strict';
}
=====================================output=====================================
function foo() {
  // comment
  "use strict"
}

================================================================================
`;

exports[`snippet: #5 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  // comment
  'use strict';
}
=====================================output=====================================
function foo() {
  // comment
  "use strict";
}

================================================================================
`;

exports[`snippet: #6 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
'use strict' // comment
=====================================output=====================================
"use strict" // comment

================================================================================
`;

exports[`snippet: #6 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
'use strict' // comment
=====================================output=====================================
"use strict"; // comment

================================================================================
`;

exports[`snippet: #7 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  'use strict' // comment
}
=====================================output=====================================
function foo() {
  "use strict" // comment
}

================================================================================
`;

exports[`snippet: #7 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  'use strict' // comment
}
=====================================output=====================================
function foo() {
  "use strict"; // comment
}

================================================================================
`;

exports[`snippet: #8 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
'use strict';
/* comment */
(function () {})();
=====================================output=====================================
"use strict"
/* comment */
;(function () {})()

================================================================================
`;

exports[`snippet: #8 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
'use strict';
/* comment */
(function () {})();
=====================================output=====================================
"use strict";
/* comment */
(function () {})();

================================================================================
`;

exports[`snippet: #9 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  'use strict';
  /* comment */
  (function () {})();
}
=====================================output=====================================
function foo() {
  "use strict"
  /* comment */
  ;(function () {})()
}

================================================================================
`;

exports[`snippet: #9 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  'use strict';
  /* comment */
  (function () {})();
}
=====================================output=====================================
function foo() {
  "use strict";
  /* comment */
  (function () {})();
}

================================================================================
`;

exports[`snippet: #10 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */
'use strict';
(function () {})();
=====================================output=====================================
/* comment */
"use strict"
;(function () {})()

================================================================================
`;

exports[`snippet: #10 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */
'use strict';
(function () {})();
=====================================output=====================================
/* comment */
"use strict";
(function () {})();

================================================================================
`;

exports[`snippet: #11 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  /* comment */
  'use strict';
  (function () {})();
}
=====================================output=====================================
function foo() {
  /* comment */
  "use strict"
  ;(function () {})()
}

================================================================================
`;

exports[`snippet: #11 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  /* comment */
  'use strict';
  (function () {})();
}
=====================================output=====================================
function foo() {
  /* comment */
  "use strict";
  (function () {})();
}

================================================================================
`;

exports[`snippet: #12 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
'use strict';
// comment
(function () {})();
=====================================output=====================================
"use strict"
// comment
;(function () {})()

================================================================================
`;

exports[`snippet: #12 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
'use strict';
// comment
(function () {})();
=====================================output=====================================
"use strict";
// comment
(function () {})();

================================================================================
`;

exports[`snippet: #13 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  'use strict';
  // comment
  (function () {})();
}
=====================================output=====================================
function foo() {
  "use strict"
  // comment
  ;(function () {})()
}

================================================================================
`;

exports[`snippet: #13 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  'use strict';
  // comment
  (function () {})();
}
=====================================output=====================================
function foo() {
  "use strict";
  // comment
  (function () {})();
}

================================================================================
`;

exports[`snippet: #14 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment
'use strict';
(function () {})();
=====================================output=====================================
// comment
"use strict"
;(function () {})()

================================================================================
`;

exports[`snippet: #14 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment
'use strict';
(function () {})();
=====================================output=====================================
// comment
"use strict";
(function () {})();

================================================================================
`;

exports[`snippet: #15 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  // comment
  'use strict';
  (function () {})();
}
=====================================output=====================================
function foo() {
  // comment
  "use strict"
  ;(function () {})()
}

================================================================================
`;

exports[`snippet: #15 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo() {
  // comment
  'use strict';
  (function () {})();
}
=====================================output=====================================
function foo() {
  // comment
  "use strict";
  (function () {})();
}

================================================================================
`;
